update thymeleaf templates

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -234,7 +234,7 @@
                     </div>
                 </div>
             </header>
-            <div class="breadcrumb-area pt-255 pb-170" style="background-image: url(/img/banner/banner-4.jpg)">
+            <div class="breadcrumb-area pt-255 pb-170" style="background-image: url(http://preview.freethemescloud.com/oswan/assets/img/banner/banner-4.jpg)">
                 <div class="container-fluid">
                     <div class="breadcrumb-content text-center">
                         <h2>Cart page</h2>
@@ -266,7 +266,7 @@
                                     <tbody>
                                         <tr>
                                             <td class="product-thumbnail">
-                                                <a href="#"><img src="/img/cart/4.jpg" alt=""></a>
+                                                <a href="#"><img src="http://preview.freethemescloud.com/oswan/assets/img/cart/4.jpg" alt=""></a>
                                             </td>
                                             <td class="product-name">
                                                 <a href="#">Gloriori GSX 250 R</a>
@@ -282,7 +282,7 @@
                                         </tr>
                                         <tr>
                                             <td class="product-thumbnail">
-                                                <a href="#"><img src="/img/cart/5.jpg" alt=""></a>
+                                                <a href="#"><img src="http://preview.freethemescloud.com/oswan/assets/img/cart/5.jpg" alt=""></a>
                                             </td>
                                             <td class="product-name">
                                                 <a href="#">Klager GSX 250 R</a>
@@ -298,7 +298,7 @@
                                         </tr>
                                         <tr>
                                             <td class="product-thumbnail">
-                                                <a href="#"><img src="/img/cart/6.jpg" alt=""></a>
+                                                <a href="#"><img src="http://preview.freethemescloud.com/oswan/assets/img/cart/6.jpg" alt=""></a>
                                             </td>
                                             <td class="product-name">
                                                 <a href="#">Matrio Max</a>
@@ -314,7 +314,7 @@
                                         </tr>
                                         <tr>
                                             <td class="product-thumbnail">
-                                                <a href="#"><img src="/img/cart/7.jpg" alt=""></a>
+                                                <a href="#"><img src="http://preview.freethemescloud.com/oswan/assets/img/cart/7.jpg" alt=""></a>
                                             </td>
                                             <td class="product-name">
                                                 <a href="#">Demonissi Gori</a>
