--- a/src/main/resources/templates/product-details.html
+++ b/src/main/resources/templates/product-details.html
@@ -235,7 +235,7 @@
                     </div>
                 </div>
             </header>
-            <div class="breadcrumb-area pt-255 pb-170" style="background-image: url(/img/banner/banner-4.jpg)">
+            <div class="breadcrumb-area pt-255 pb-170" style="background-image: url(http://preview.freethemescloud.com/oswan/assets/img/banner/banner-4.jpg)">
                 <div class="container-fluid">
                     <div class="breadcrumb-content text-center">
                         <h2>product details </h2>
@@ -257,55 +257,55 @@
                                     <div class="product-details-large tab-content">
                                         <div class="tab-pane active" id="pro-details1">
                                             <div class="easyzoom easyzoom--overlay">
-                                                <a href="/img/product-details/bl1.jpg">
-                                                    <img src="/img/product-details/l1.jpg" alt="">
+                                                <a href="http://preview.freethemescloud.com/oswan/assets/img/product-details/bl1.jpg">
+                                                    <img src="http://preview.freethemescloud.com/oswan/assets/img/product-details/l1.jpg" alt="">
                                                 </a>
                                             </div>
                                         </div>
                                         <div class="tab-pane" id="pro-details2">
                                             <div class="easyzoom easyzoom--overlay">
-                                                <a href="/img/product-details/bl2.jpg">
-                                                    <img src="/img/product-details/l2.jpg" alt="">
+                                                <a href="http://preview.freethemescloud.com/oswan/assets/img/product-details/bl2.jpg">
+                                                    <img src="http://preview.freethemescloud.com/oswan/assets/img/product-details/l2.jpg" alt="">
                                                 </a>
                                             </div>
                                         </div>
                                         <div class="tab-pane" id="pro-details3">
                                             <div class="easyzoom easyzoom--overlay">
-                                                <a href="/img/product-details/bl3.jpg">
-                                                    <img src="/img/product-details/l3.jpg" alt="">
+                                                <a href="http://preview.freethemescloud.com/oswan/assets/img/product-details/bl3.jpg">
+                                                    <img src="http://preview.freethemescloud.com/oswan/assets/img/product-details/l3.jpg" alt="">
                                                 </a>
                                             </div>
                                         </div>
                                         <div class="tab-pane" id="pro-details4">
                                             <div class="easyzoom easyzoom--overlay">
-                                                <a href="/img/product-details/bl4.jpg">
-                                                    <img src="/img/product-details/l4.jpg" alt="">
+                                                <a href="http://preview.freethemescloud.com/oswan/assets/img/product-details/bl4.jpg">
+                                                    <img src="http://preview.freethemescloud.com/oswan/assets/img/product-details/l4.jpg" alt="">
                                                 </a>
                                             </div>
                                         </div>
                                         <div class="tab-pane" id="pro-details5">
                                             <div class="easyzoom easyzoom--overlay">
-                                                <a href="/img/product-details/bl3.jpg">
-                                                    <img src="/img/product-details/l3.jpg" alt="">
+                                                <a href="http://preview.freethemescloud.com/oswan/assets/img/product-details/bl3.jpg">
+                                                    <img src="http://preview.freethemescloud.com/oswan/assets/img/product-details/l3.jpg" alt="">
                                                 </a>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="product-details-small nav mt-12 product-dec-slider owl-carousel">
                                         <a class="active" href="#pro-details1">
-                                            <img src="/img/product-details/s1.jpg" alt="">
+                                            <img src="http://preview.freethemescloud.com/oswan/assets/img/product-details/s1.jpg" alt="">
                                         </a>
                                         <a href="#pro-details2">
-                                            <img src="/img/product-details/s2.jpg" alt="">
+                                            <img src="http://preview.freethemescloud.com/oswan/assets/img/product-details/s2.jpg" alt="">
                                         </a>
                                         <a href="#pro-details3">
-                                            <img src="/img/product-details/s3.jpg" alt="">
+                                            <img src="http://preview.freethemescloud.com/oswan/assets/img/product-details/s3.jpg" alt="">
                                         </a>
                                         <a href="#pro-details4">
-                                            <img src="/img/product-details/s4.jpg" alt="">
+                                            <img src="http://preview.freethemescloud.com/oswan/assets/img/product-details/s4.jpg" alt="">
                                         </a>
                                         <a href="#pro-details5">
-                                            <img src="/img/product-details/s3.jpg" alt="">
+                                            <img src="http://preview.freethemescloud.com/oswan/assets/img/product-details/s3.jpg" alt="">
                                         </a>
                                     </div>
                                 </div>
