--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -237,17 +237,17 @@
             </header>
             <div class="slider-area">
                 <div class="slider-active owl-carousel">
-                    <div class="single-slider slider-1" style="background-image: url(/img/slider/slider-bg.jpg)">
+                    <div class="single-slider slider-1" style="background-image: url(http://preview.freethemescloud.com/oswan/assets/img/slider/slider-bg.jpg)">
                         <div class="container">
                             <div class="slider-content slider-animated-1">
                                 <div class="slider-img text-center">
                                     <img class="animated" src="/img/slider/bike-1.png" alt="slider images">
                                 </div>
                                 <div class="slider-text-img">
-                                    <h6 class="animated">BOOK YOUR BIKE INSTANTLY AND ENJOY DISCOUNT</h6>
+                                    <h6 class="animated">BOOK YOUR CAR INSTANTLY AND ENJOY DISCOUNT</h6>
                                     <img class="animated" src="/img/icon-img/bike.png" alt="slider images">
                                 </div>
-                                <h2 class="animated">MOTORCYCLE</h2>
+                                <h2 class="animated">AUTOMOBILE</h2>
                             </div>
                         </div>
                     </div>
@@ -255,13 +255,13 @@
                         <div class="container">
                             <div class="slider-content slider-animated-1">
                                 <div class="slider-img text-center">
-                                    <img class="animated" src="/img/slider/bike-2.png" alt="slider images">
+                                    <img class="animated" src="http://preview.freethemescloud.com/oswan/assets/img/slider/bike-2.png" alt="slider images">
                                 </div>
                                 <div class="slider-text-img">
-                                    <h6 class="animated">BOOK YOUR BIKE INSTANTLY AND ENJOY DISCOUNT</h6>
+                                    <h6 class="animated">BOOK YOUR CAR INSTANTLY AND ENJOY DISCOUNT</h6>
                                     <img class="animated" src="/img/icon-img/bike.png" alt="slider images">
                                 </div>
-                                <h2 class="animated">MOTORCYCLE</h2>
+                                <h2 class="animated">AUTOMOBILE</h2>
                             </div>
                         </div>
                     </div>
@@ -269,13 +269,13 @@
                         <div class="container">
                             <div class="slider-content slider-animated-1">
                                 <div class="slider-img text-center">
-                                    <img class="animated" src="/img/slider/bike-1.png" alt="slider images">
+                                    <img class="animated" src="/img/slider/car-1.png" alt="slider images">
                                 </div>
                                 <div class="slider-text-img">
-                                    <h6 class="animated">BOOK YOUR BIKE INSTANTLY AND ENJOY DISCOUNT</h6>
+                                    <h6 class="animated">BOOK YOUR CAR INSTANTLY AND ENJOY DISCOUNT</h6>
                                     <img class="animated" src="/img/icon-img/bike.png" alt="slider images">
                                 </div>
-                                <h2 class="animated">MOTORCYCLE</h2>
+                                <h2 class="animated">AUTOMOBILE</h2>
                             </div>
                         </div>
                     </div>
@@ -292,15 +292,15 @@
                         <div class="language">
                             <select class="select-header orderby">
                                 <option value="">ENG</option>
-                                <option value="">BANGLA </option>
-                                <option value="">HINDI</option>
+                                <option value="">VIE </option>
+                                <option value="" style="display: none">HINDI</option>
                             </select>
                         </div>
                         <div class="currency">
                             <select class="select-header orderby">
-                                <option value="">$USD</option>
-                                <option value="">US </option>
-                                <option value="">EURO</option>
+                                <option value="">USD</option>
+                                <option value="">VND</option>
+                                <option value="" style="display: none">EURO</option>
                             </select>
                         </div>
                     </div>
@@ -329,7 +329,7 @@
                         </div>
                         <div class="col-lg-6 col-md-12">
                             <div class="overview-img">
-                                <img class="tilter" src="/img/banner/banner-1.png" alt="">
+                                <img class="tilter" src="http://preview.freethemescloud.com/oswan/assets/img/banner/banner-1.png" alt="">
                             </div>
                         </div>
                     </div>
@@ -386,7 +386,7 @@
                                     <div class="product-wrapper">
                                         <div class="product-img">
                                             <a href="product-details.html">
-                                                <img src="/img/product/product-1.jpg" alt="">
+                                                <img src="http://preview.freethemescloud.com/oswan/assets/img/product/product-1.jpg" alt="">
                                             </a>
                                             <div class="product-item-dec">
                                                 <ul>
@@ -421,7 +421,7 @@
                                     <div class="product-wrapper">
                                         <div class="product-img">
                                             <a href="product-details.html">
-                                                <img src="/img/product/product-4.jpg" alt="">
+                                                <img src="http://preview.freethemescloud.com/oswan/assets/img/product/product-4.jpg" alt="">
                                             </a>
                                             <div class="product-item-dec">
                                                 <ul>
@@ -458,7 +458,7 @@
                                     <div class="product-wrapper">
                                         <div class="product-img">
                                             <a href="product-details.html">
-                                                <img src="/img/product/product-2.jpg" alt="">
+                                                <img src="http://preview.freethemescloud.com/oswan/assets/img/product/product-2.jpg" alt="">
                                             </a>
                                             <div class="product-item-dec">
                                                 <ul>
@@ -493,7 +493,7 @@
                                     <div class="product-wrapper">
                                         <div class="product-img">
                                             <a href="product-details.html">
-                                                <img src="/img/product/product-5.jpg" alt="">
+                                                <img src="http://preview.freethemescloud.com/oswan/assets/img/product/product-5.jpg" alt="">
                                             </a>
                                             <div class="product-item-dec">
                                                 <ul>
@@ -530,7 +530,7 @@
                                     <div class="product-wrapper">
                                         <div class="product-img">
                                             <a href="product-details.html">
-                                                <img src="/img/product/product-3.jpg" alt="">
+                                                <img src="http://preview.freethemescloud.com/oswan/assets/img/product/product-3.jpg" alt="">
                                             </a>
                                             <div class="product-item-dec">
                                                 <ul>
@@ -565,7 +565,7 @@
                                     <div class="product-wrapper">
                                         <div class="product-img">
                                             <a href="product-details.html">
-                                                <img src="/img/product/product-6.jpg" alt="">
+                                                <img src="http://preview.freethemescloud.com/oswan/assets/img/product/product-6.jpg" alt="">
                                             </a>
                                             <div class="product-item-dec">
                                                 <ul>
@@ -602,7 +602,7 @@
                                     <div class="product-wrapper">
                                         <div class="product-img">
                                             <a href="product-details.html">
-                                                <img src="/img/product/product-2.jpg" alt="">
+                                                <img src="http://preview.freethemescloud.com/oswan/assets/img/product/product-2.jpg" alt="">
                                             </a>
                                             <div class="product-item-dec">
                                                 <ul>
@@ -637,7 +637,7 @@
                                     <div class="product-wrapper">
                                         <div class="product-img">
                                             <a href="product-details.html">
-                                                <img src="/img/product/product-5.jpg" alt="">
+                                                <img src="http://preview.freethemescloud.com/oswan/assets/img/product/product-5.jpg" alt="">
                                             </a>
                                             <div class="product-item-dec">
                                                 <ul>
@@ -967,14 +967,14 @@
                     </div>
                 </div>
             </div>
-            <div class="latest-product-area pt-205 pb-145 bg-img" style="background-image: url(/img/banner/banner-4.jpg)">
+            <div class="latest-product-area pt-205 pb-145 bg-img" style="background-image: url(http://preview.freethemescloud.com/oswan/assets/img/banner/banner-4.jpg)">
                 <div class="container-fluid">
                     <div class="latest-product-slider owl-carousel">
                         <div class="single-latest-product slider-animated-2">
                             <div class="row">
                                 <div class="col-lg-7 col-md-12 col-12">
                                     <div class="latest-product-img">
-                                        <img class="animated" src="/img/banner/banner-2.png" alt="image">
+                                        <img class="animated" src="http://preview.freethemescloud.com/oswan/assets/img/banner/banner-2.png" alt="image">
                                     </div>
                                 </div>
                                 <div class="col-lg-5 col-md-12 col-12">
@@ -996,7 +996,7 @@
                             <div class="row">
                                 <div class="col-lg-7 col-col-12 col-12">
                                     <div class="latest-product-img">
-                                        <img class="animated" src="/img/banner/banner-3.png" alt="image">
+                                        <img class="animated" src="http://preview.freethemescloud.com/oswan/assets/img/banner/banner-3.png" alt="image">
                                     </div>
                                 </div>
                                 <div class="col-lg-5 col-col-12 col-12">
