--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -236,7 +236,7 @@
                     </div>
                 </div>
             </header>
-            <div class="breadcrumb-area pt-255 pb-170" style="background-image: url(/img/banner/banner-4.jpg)">
+            <div class="breadcrumb-area pt-255 pb-170" style="background-image: url(http://preview.freethemescloud.com/oswan/assets/img/banner/banner-4.jpg)">
                 <div class="container-fluid">
                     <div class="breadcrumb-content text-center">
                         <h2>Shop Page</h2>
@@ -398,7 +398,7 @@
                                             <div class="product-wrapper mb-35">
                                                 <div class="product-img">
                                                     <a href="product-details.html">
-                                                        <img src="/img/product/product-1.jpg" alt="">
+                                                        <img src="http://preview.freethemescloud.com/oswan/assets/img/product/product-1.jpg" alt="">
                                                     </a>
                                                     <div class="product-item-dec">
                                                         <ul>
@@ -452,7 +452,7 @@
                                             <div class="product-wrapper mb-35">
                                                 <div class="product-img">
                                                     <a href="product-details.html">
-                                                        <img src="/img/product/product-2.jpg" alt="">
+                                                        <img src="http://preview.freethemescloud.com/oswan/assets/img/product/product-2.jpg" alt="">
                                                     </a>
                                                     <div class="product-item-dec">
                                                         <ul>
@@ -506,7 +506,7 @@
                                             <div class="product-wrapper mb-35">
                                                 <div class="product-img">
                                                     <a href="product-details.html">
-                                                        <img src="/img/product/product-3.jpg" alt="">
+                                                        <img src="http://preview.freethemescloud.com/oswan/assets/img/product/product-3.jpg" alt="">
                                                     </a>
                                                     <div class="product-item-dec">
                                                         <ul>
@@ -560,7 +560,7 @@
                                             <div class="product-wrapper mb-35">
                                                 <div class="product-img">
                                                     <a href="product-details.html">
-                                                        <img src="/img/product/product-4.jpg" alt="">
+                                                        <img src="http://preview.freethemescloud.com/oswan/assets/img/product/product-4.jpg" alt="">
                                                     </a>
                                                     <div class="product-item-dec">
                                                         <ul>
@@ -614,7 +614,7 @@
                                             <div class="product-wrapper mb-35">
                                                 <div class="product-img">
                                                     <a href="product-details.html">
-                                                        <img src="/img/product/product-5.jpg" alt="">
+                                                        <img src="http://preview.freethemescloud.com/oswan/assets/img/product/product-5.jpg" alt="">
                                                     </a>
                                                     <div class="product-item-dec">
                                                         <ul>
@@ -668,7 +668,7 @@
                                             <div class="product-wrapper mb-35">
                                                 <div class="product-img">
                                                     <a href="product-details.html">
-                                                        <img src="/img/product/product-6.jpg" alt="">
+                                                        <img src="http://preview.freethemescloud.com/oswan/assets/img/product/product-6.jpg" alt="">
                                                     </a>
                                                     <div class="product-item-dec">
                                                         <ul>
