--- a/src/main/resources/templates/wishlist.html
+++ b/src/main/resources/templates/wishlist.html
@@ -7,21 +7,21 @@
         <meta name="description" content="Live Preview Of Oswan eCommerce HTML5 Template">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Favicon -->
-        <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png">
+        <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.png">
 		
 		<!-- all css here -->
-        <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-        <link rel="stylesheet" href="assets/css/animate.css">
-        <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
-        <link rel="stylesheet" href="assets/css/chosen.min.css">
-        <link rel="stylesheet" href="assets/css/meanmenu.min.css">
-        <link rel="stylesheet" href="assets/css/themify-icons.css">
-        <link rel="stylesheet" href="assets/css/icofont.css">
-        <link rel="stylesheet" href="assets/css/font-awesome.min.css">
-        <link rel="stylesheet" href="assets/css/bundle.css">
-        <link rel="stylesheet" href="assets/css/style.css">
-        <link rel="stylesheet" href="assets/css/responsive.css">
-        <script src="assets/js/vendor/modernizr-2.8.3.min.js"></script>
+        <link rel="stylesheet" href="/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/css/animate.css">
+        <link rel="stylesheet" href="/css/owl.carousel.min.css">
+        <link rel="stylesheet" href="/css/chosen.min.css">
+        <link rel="stylesheet" href="/css/meanmenu.min.css">
+        <link rel="stylesheet" href="/css/themify-icons.css">
+        <link rel="stylesheet" href="/css/icofont.css">
+        <link rel="stylesheet" href="/css/font-awesome.min.css">
+        <link rel="stylesheet" href="/css/bundle.css">
+        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="/css/responsive.css">
+        <script src="/js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
         <div class="wrapper">
@@ -31,7 +31,7 @@
                         <div class="row">
                             <div class="col-lg-4 col-md-4 col-4">
                                 <div class="logo-small-device">
-                                    <a href="index.html"><img alt="" src="assets/img/logo/logo.png"></a>
+                                    <a href="index.html"><img alt="" src="/img/logo/logo.png"></a>
                                 </div>
                             </div>
                             <div class="col-lg-8 col-md-8 col-8">
@@ -41,8 +41,8 @@
                                     </div>
                                     <div class="menu-wrapper text-center">
                                         <button class="menu-toggle">
-                                            <img class="s-open" alt="" src="assets/img/icon-img/menu.png">
-                                            <img class="s-close" alt="" src="assets/img/icon-img/menu-close.png">
+                                            <img class="s-open" alt="" src="/img/icon-img/menu.png">
+                                            <img class="s-close" alt="" src="/img/icon-img/menu-close.png">
                                         </button>
                                         <div class="main-menu">
                                             <nav>
@@ -90,7 +90,7 @@
                                         <ul>
                                             <li class="single-shopping-cart">
                                                 <div class="shopping-cart-img">
-                                                    <a href="#"><img alt="" src="assets/img/cart/cart-1.jpg"></a>
+                                                    <a href="#"><img alt="" src="/img/cart/cart-1.jpg"></a>
                                                 </div>
                                                 <div class="shopping-cart-title">
                                                     <h3><a href="#">Gloriori GSX 250 R </a></h3>
@@ -103,7 +103,7 @@
                                             </li>
                                             <li class="single-shopping-cart">
                                                 <div class="shopping-cart-img">
-                                                    <a href="#"><img alt="" src="assets/img/cart/cart-2.jpg"></a>
+                                                    <a href="#"><img alt="" src="/img/cart/cart-2.jpg"></a>
                                                 </div>
                                                 <div class="shopping-cart-title">
                                                     <h3><a href="#">Demonissi Gori</a></h3>
@@ -116,7 +116,7 @@
                                             </li>
                                             <li class="single-shopping-cart">
                                                 <div class="shopping-cart-img">
-                                                    <a href="#"><img alt="" src="assets/img/cart/cart-3.jpg"></a>
+                                                    <a href="#"><img alt="" src="/img/cart/cart-3.jpg"></a>
                                                 </div>
                                                 <div class="shopping-cart-title">
                                                     <h3><a href="#">Demonissi Gori</a></h3>
@@ -185,7 +185,7 @@
                                 <ul>
                                     <li class="single-shopping-cart">
                                         <div class="shopping-cart-img">
-                                            <a href="#"><img alt="" src="assets/img/cart/cart-1.jpg"></a>
+                                            <a href="#"><img alt="" src="/img/cart/cart-1.jpg"></a>
                                         </div>
                                         <div class="shopping-cart-title">
                                             <h3><a href="#">Gloriori GSX 250 R </a></h3>
@@ -198,7 +198,7 @@
                                     </li>
                                     <li class="single-shopping-cart">
                                         <div class="shopping-cart-img">
-                                            <a href="#"><img alt="" src="assets/img/cart/cart-2.jpg"></a>
+                                            <a href="#"><img alt="" src="/img/cart/cart-2.jpg"></a>
                                         </div>
                                         <div class="shopping-cart-title">
                                             <h3><a href="#">Demonissi Gori</a></h3>
@@ -211,7 +211,7 @@
                                     </li>
                                     <li class="single-shopping-cart">
                                         <div class="shopping-cart-img">
-                                            <a href="#"><img alt="" src="assets/img/cart/cart-3.jpg"></a>
+                                            <a href="#"><img alt="" src="/img/cart/cart-3.jpg"></a>
                                         </div>
                                         <div class="shopping-cart-title">
                                             <h3><a href="#">Demonissi Gori</a></h3>
@@ -234,7 +234,7 @@
                     </div>
                 </div>
             </header>
-            <div class="breadcrumb-area pt-255 pb-170" style="background-image: url(assets/img/banner/banner-4.jpg)">
+            <div class="breadcrumb-area pt-255 pb-170" style="background-image: url(/img/banner/banner-4.jpg)">
                 <div class="container-fluid">
                     <div class="breadcrumb-content text-center">
                         <h2>wishlist</h2>
@@ -266,7 +266,7 @@
                                     <tbody>
                                         <tr>
                                             <td class="product-thumbnail">
-                                                <a href="#"><img src="assets/img/cart/4.jpg" alt=""></a>
+                                                <a href="#"><img src="/img/cart/4.jpg" alt=""></a>
                                             </td>
                                             <td class="product-name">
                                                 <a href="#">Gloriori GSX 250 R</a>
@@ -282,7 +282,7 @@
                                         </tr>
                                         <tr>
                                             <td class="product-thumbnail">
-                                                <a href="#"><img src="assets/img/cart/5.jpg" alt=""></a>
+                                                <a href="#"><img src="/img/cart/5.jpg" alt=""></a>
                                             </td>
                                             <td class="product-name">
                                                 <a href="#">Klager GSX 250 R</a>
@@ -298,7 +298,7 @@
                                         </tr>
                                         <tr>
                                             <td class="product-thumbnail">
-                                                <a href="#"><img src="assets/img/cart/6.jpg" alt=""></a>
+                                                <a href="#"><img src="/img/cart/6.jpg" alt=""></a>
                                             </td>
                                             <td class="product-name">
                                                 <a href="#">Matrio Max</a>
@@ -314,7 +314,7 @@
                                         </tr>
                                         <tr>
                                             <td class="product-thumbnail">
-                                                <a href="#"><img src="assets/img/cart/7.jpg" alt=""></a>
+                                                <a href="#"><img src="/img/cart/7.jpg" alt=""></a>
                                             </td>
                                             <td class="product-name">
                                                 <a href="#">Demonissi Gori</a>
@@ -340,8 +340,8 @@
                     <div class="newsletter-wrapper-all theme-bg-2">
                         <div class="row">
                             <div class="col-lg-5 col-12 col-md-12">
-                                <div class="newsletter-img bg-img" style="background-image: url(assets/img/banner/newsletter-bg.png)">
-                                    <img alt="image" src="assets/img/team/newsletter-img.png">
+                                <div class="newsletter-img bg-img" style="background-image: url(/img/banner/newsletter-bg.png)">
+                                    <img alt="image" src="/img/team/newsletter-img.png">
                                 </div>
                             </div>
                             <div class="col-lg-7 col-12 col-md-12">
@@ -373,7 +373,7 @@
                                 <div class="footer-widget mb-30">
                                     <div class="footer-logo">
                                         <a href="index.html">
-                                            <img src="assets/img/logo/2.png" alt="">
+                                            <img src="/img/logo/2.png" alt="">
                                         </a>
                                     </div>
                                     <div class="footer-about">
@@ -472,7 +472,7 @@
                             </div>
                             <div class="col-md-4 col-12">
                                 <div class="footer-payment-method">
-                                    <a href="#"><img alt="" src="assets/img/icon-img/payment.png"></a>
+                                    <a href="#"><img alt="" src="/img/icon-img/payment.png"></a>
                                 </div>
                             </div>
                         </div>
@@ -488,16 +488,16 @@
 		
 		
 		<!-- all js here -->
-        <script src="assets/js/vendor/jquery-1.12.0.min.js"></script>
-        <script src="assets/js/popper.js"></script>
-        <script src="assets/js/bootstrap.min.js"></script>
-        <script src="assets/js/isotope.pkgd.min.js"></script>
-        <script src="assets/js/imagesloaded.pkgd.min.js"></script>
-        <script src="assets/js/jquery.counterup.min.js"></script>
-        <script src="assets/js/waypoints.min.js"></script>
+        <script src="/js/vendor/jquery-1.12.0.min.js"></script>
+        <script src="/js/popper.js"></script>
+        <script src="/js/bootstrap.min.js"></script>
+        <script src="/js/isotope.pkgd.min.js"></script>
+        <script src="/js/imagesloaded.pkgd.min.js"></script>
+        <script src="/js/jquery.counterup.min.js"></script>
+        <script src="/js/waypoints.min.js"></script>
         
-        <script src="assets/js/owl.carousel.min.js"></script>
-        <script src="assets/js/plugins.js"></script>
-        <script src="assets/js/main.js"></script>
+        <script src="/js/owl.carousel.min.js"></script>
+        <script src="/js/plugins.js"></script>
+        <script src="/js/main.js"></script>
     </body>
 </html>
