Revert "add security v1.0"
This reverts commit 6ddb75b724e0a59269a2b9f2d32cbc3ca5ec6384.

--- a/src/main/resources/templates/login-register.html
+++ b/src/main/resources/templates/login-register.html
@@ -21,10 +21,6 @@
         <link rel="stylesheet" href="/css/bundle.css">
         <link rel="stylesheet" href="/css/style.css">
         <link rel="stylesheet" href="/css/responsive.css">
-
-        <link rel="stylesheet" href="/js/vendor/magnific-popup.css">
-        <link rel="stylesheet" href="/js/vendor/datepicker3.css">
-
         <script src="/js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
@@ -269,15 +265,15 @@
                                         <div class="login-form-container">
                                             <div class="login-form">
                                                 <form action="#" method="post">
-                                                    <input type="text" name="user-name" placeholder="Username" id="signin-email">
-                                                    <input type="password" name="user-password" placeholder="Password" id="signin-password">
+                                                    <input type="text" name="user-name" placeholder="Username">
+                                                    <input type="password" name="user-password" placeholder="Password">
                                                     <div class="button-box">
                                                         <div class="login-toggle-btn">
                                                             <input type="checkbox">
                                                             <label>Remember me</label>
                                                             <a href="#">Forgot Password?</a>
                                                         </div>
-                                                        <button type="submit" class="btn-style cr-btn" id="btn-signin"><span>Login</span></button>
+                                                        <button type="submit" class="btn-style cr-btn"><span>Login</span></button>
                                                     </div>
                                                 </form>
                                             </div>
@@ -287,12 +283,11 @@
                                         <div class="login-form-container">
                                             <div class="login-form">
                                                 <form action="#" method="post">
-                                                    <input type="text" name="user-name" placeholder="FullName" id="signup-name">
-                                                    <input type="password" name="user-password" placeholder="Password" id="signup-password">
-                                                    <input type="password" name="user-password-confirmation" placeholder="Password Confirmation" id="signup-password-confirm">
-                                                    <input name="user-email" placeholder="Email" type="email" id="signup-email">
+                                                    <input type="text" name="user-name" placeholder="Username">
+                                                    <input type="password" name="user-password" placeholder="Password">
+                                                    <input name="user-email" placeholder="Email" type="email">
                                                     <div class="button-box">
-                                                        <button type="submit" class="btn-style cr-btn" id="btn-signup"><span>Register</span></button>
+                                                        <button type="submit" class="btn-style cr-btn"><span>Register</span></button>
                                                     </div>
                                                 </form>
                                             </div>
@@ -468,13 +463,7 @@
         <script src="/js/imagesloaded.pkgd.min.js"></script>
         <script src="/js/jquery.counterup.min.js"></script>
         <script src="/js/waypoints.min.js"></script>
-
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
-        <script src="/js/vendor/pnotify.custom.js"></script>
-        <script src="/js/magnific-popup.js"></script>
-        <script src="/js/signin.js"></script>
-        <script src="/js/signup.js"></script>
-
+        
         <script src="/js/owl.carousel.min.js"></script>
         <script src="/js/plugins.js"></script>
         <script src="/js/main.js"></script>
