--- a/src/main/resources/templates/login-register.html
+++ b/src/main/resources/templates/login-register.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="zxx">
+<html class="no-js" lang="en" xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -264,32 +264,39 @@
                                     <div id="lg1" class="tab-pane active">
                                         <div class="login-form-container">
                                             <div class="login-form">
-                                                <form action="#" method="post">
-                                                    <input type="text" name="user-name" placeholder="Username">
-                                                    <input type="password" name="user-password" placeholder="Password">
+                                                <!--<form action="#" method="post">-->
+                                                    <input type="email" name="user-name" placeholder="Username"
+                                                           id="sign-in-email">
+                                                    <input type="password" name="user-password" placeholder="Password"
+                                                           id="sign-in-password">
                                                     <div class="button-box">
                                                         <div class="login-toggle-btn">
                                                             <input type="checkbox">
                                                             <label>Remember me</label>
                                                             <a href="#">Forgot Password?</a>
                                                         </div>
-                                                        <button type="submit" class="btn-style cr-btn"><span>Login</span></button>
+                                                        <button class="btn-style cr-btn" id="btn-sign-in"><span>Login</span></button>
                                                     </div>
-                                                </form>
+                                                <!--</form>-->
                                             </div>
                                         </div>
                                     </div>
                                     <div id="lg2" class="tab-pane">
                                         <div class="login-form-container">
                                             <div class="login-form">
-                                                <form action="#" method="post">
-                                                    <input type="text" name="user-name" placeholder="Username">
-                                                    <input type="password" name="user-password" placeholder="Password">
-                                                    <input name="user-email" placeholder="Email" type="email">
+                                              <!--  <form action="#" method="post">-->
+
+                                                    <input type="text" name="full-name" placeholder="Họ và " id="register-name">
+                                                    <input name="address" type="text" id="register-address" placeholder="Địa chỉ"/>
+                                                    <input name="phone" type="text" id="register-phone" placeholder="Số điện thoại"/>
+                                                    <input name="user-email" placeholder="Email" type="email" id="register-email">
+                                                    <input type="password" name="user-password" placeholder="Password" id="register-password">
+                                                    <input name="pwd_confirm" type="password"  id="register-password-confirmation"
+                                                           placeholder="Nhập lại mật khẩu"/>
                                                     <div class="button-box">
-                                                        <button type="submit" class="btn-style cr-btn"><span>Register</span></button>
+                                                        <button  class="btn-style cr-btn" id="btn-register"><span>Register</span></button>
                                                     </div>
-                                                </form>
+                                                <!--</form>-->
                                             </div>
                                         </div>
                                     </div>
@@ -467,5 +474,11 @@
         <script src="/js/owl.carousel.min.js"></script>
         <script src="/js/plugins.js"></script>
         <script src="/js/main.js"></script>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.9.0/sweetalert2.all.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/nprogress/0.2.0/nprogress.min.js"></script>
+        <script th:src="@{/js/client/js/signin.js}"></script>
+        <script th:src="@{/js/client/js/register.js}"></script>
     </body>
 </html>
